--- a/asset/style.css
+++ b/asset/style.css
@@ -1,30 +1,106 @@
-/* *{
+
+body {
     padding: 0;
     margin: 0;
-}*/
-body {
-    font-family: Arial, Helvetica, sans-serif;
-    
+    box-sizing: border-box;
+    font-family: "Roboto", sans-serif;
+    font-weight: 300;
+    font-style: normal;   
 }
 main {
     display: flex;
-}
-section {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-   /* width: 100vw;
-    height: 100vh;*/
-    background-color: #FFFF;
-    background-image: url(../asset/images/hand.png);
-    background-repeat: no-repeat;
     
+    min-width: 100%;
+    min-height: 100%;  
 }
-.barra-navegacion{
+ul {
+    margin: 0;
+    padding: 0;      
+}
+ul li {
+    list-style-type: none;
+}
+  
+.menu img{  
+     
     display: flex;
-}
-li img {
     border-radius: 50%;
+    width: 3em;
+    height: 3em;   
+    margin-left: 1em;
+    margin-right: 0.5em;
+}
+
+.menu-aside{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    width: 17rem;
+    padding-left: 0.5em;
+    padding-right: 0.5em;  
+    cursor: pointer;  
+}
+.logos-aside i{
+     margin: 0.5em; 
+     transition: 0.5s;  
+    }
+.logos-aside i:hover {
+    background-color: aqua;
+}
+ul li {
+    border: solid 1px #EBEBE4;
+}
+.contenido-aside {
+    display: flex ;
+    align-items: center;
+}
+button {
+    background-color: #A491D2;
+    color: #FFF;
+    border: none;
+    padding: 1em 2em;
+    border-radius: 10px;
+    box-shadow: 2px 2px 10px rgba(255, 0, 0, 0.616);
+    cursor: pointer;
+    text-transform: uppercase;
+    overflow: hidden;
+    transition: 0.5s;   
+}
+button:hover {
+    background-color: aqua;
     color: black;
-    border: #FFFF;
+}
+.boton{
+    display: flex;
+    padding: 2em;
+    justify-content: center;  
+}
+.contenedor-header {
+    display: flex;
+    align-items: center;
+    padding: 0.5rem;  
+    cursor: pointer;    
+}
+
+footer img{
+    width: 14em;
+    height: 14em;
+    justify-content: center;
+    margin-bottom: 1em;  
+}
+
+footer {
+    display: flex;
+    width: 100%;  
+    justify-content: center;
+    flex-direction: column;
+    align-items: center;
+    background-color: rgba(34, 43, 43, 0.158);
+}
+footer p{
+    margin-bottom: 0%;
+    margin-top: 0;
+}
+.titulo-img-footer {
+    font-size: 2em;
 }
