--- a/asset/style.css
+++ b/asset/style.css
@@ -9,7 +9,6 @@ body {
 }
 main {
     display: flex;
-    
     min-width: 100%;
     min-height: 100%;  
 }
@@ -19,6 +18,8 @@ ul {
 }
 ul li {
     list-style-type: none;
+    border: solid 1px #EBEBE4;
+    
 }
   
 .menu img{  
@@ -29,17 +30,18 @@ ul li {
     height: 3em;   
     margin-left: 1em;
     margin-right: 0.5em;
+    
 }
 
 .menu-aside{
-    display: flex;
+    display:flex ; 
     justify-content: space-between;
     align-items: center;
     width: 17rem;
-    padding-left: 0.5em;
-    padding-right: 0.5em;  
-    cursor: pointer;  
+    cursor: pointer; 
+    padding: 0, 2rem; 
 }
+
 .logos-aside i{
      margin: 0.5em; 
      transition: 0.5s;  
@@ -47,12 +49,11 @@ ul li {
 .logos-aside i:hover {
     background-color: aqua;
 }
-ul li {
-    border: solid 1px #EBEBE4;
-}
+
 .contenido-aside {
     display: flex ;
     align-items: center;
+    margin-left: 1em;
 }
 button {
     background-color: #A491D2;
@@ -79,7 +80,8 @@ button:hover {
     display: flex;
     align-items: center;
     padding: 0.5rem;  
-    cursor: pointer;    
+    cursor: pointer;  
+      
 }
 
 footer img{
@@ -87,6 +89,7 @@ footer img{
     height: 14em;
     justify-content: center;
     margin-bottom: 1em;  
+    box-shadow: 2px 2px 10px rgba(255, 0, 0, 0.616);   
 }
 
 footer {
@@ -101,6 +104,6 @@ footer p{
     margin-bottom: 0%;
     margin-top: 0;
 }
-.titulo-img-footer {
+.contenido-img-footer {
     font-size: 2em;
 }
